force-app/main/default/objects/Deposits__c/Deposits__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070318 - Created for phase 1</description>
    <label>Deposits</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Deposit Batch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>