force-app/main/default/objects/Deposits__c/fields/CollectionAllocationNetAmount__c.field-meta.xml
<CustomField>
    <fullName>CollectionAllocationNetAmount__c</fullName>
    <label>Collection Allocation Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>