force-app/main/default/objects/Deposits__c/fields/CollectionAllocationPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>CollectionAllocationPaymentAmount__c</fullName>
    <label>Collection Allocation Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>