force-app/main/default/objects/Deposits__c/fields/DatePostedtoCDMSPUC__c.field-meta.xml
<CustomField>
    <fullName>DatePostedtoCDMSPUC__c</fullName>
    <label>Date Posted to CDMSPUC</label>
    <type>Date</type>
</CustomField>