force-app/main/default/objects/Deposits__c/fields/DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmount__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <formula>CollectionAllocationNetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>