force-app/main/default/objects/Deposits__c/fields/DepositDate__c.field-meta.xml
<CustomField>
    <fullName>DepositDate__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <label>Deposit Date</label>
    <type>DateTime</type>
</CustomField>