force-app/main/default/objects/Deposits__c/fields/DepositNumber__c.field-meta.xml
<CustomField>
    <fullName>DepositNumber__c</fullName>
    <description>PacPoint-070218 - Created for phase 1</description>
    <label>Deposit Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>