force-app/main/default/objects/Deposits__c/fields/DepositType__c.field-meta.xml
<CustomField>
    <fullName>DepositType__c</fullName>
    <label>Deposit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCCA</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>