force-app/main/default/objects/Deposits__c/fields/EndDatetoPullPayments__c.field-meta.xml
<CustomField>
    <fullName>EndDatetoPullPayments__c</fullName>
    <defaultValue>Today() - 5</defaultValue>
    <label>End Date to Pull Payments</label>
    <type>Date</type>
</CustomField>