force-app/main/default/objects/Deposits__c/fields/HIGETaxfromCashCheckMoneyOrders__c.field-meta.xml
<CustomField>
    <fullName>HIGETaxfromCashCheckMoneyOrders__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <label>HIGE Tax from Cash, Check &amp; Money Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>