force-app/main/default/objects/Deposits__c/fields/HIGETaxfromCreditCard__c.field-meta.xml
<CustomField>
    <fullName>HIGETaxfromCreditCard__c</fullName>
    <description>PacPoint-FT102818 - Created for DCCA Payment Phase 1</description>
    <label>HIGE Tax from Credit Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>