force-app/main/default/objects/Deposits__c/fields/NetCollectionsafterFees__c.field-meta.xml
<CustomField>
    <fullName>NetCollectionsafterFees__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <label>Net Collections after Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>