force-app/main/default/objects/Deposits__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>