force-app/main/default/objects/Deposits__c/fields/PUCDeposit__c.field-meta.xml
<CustomField>
    <fullName>PUCDeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC071819- Created for Phase 2</description>
    <label>PUC Deposit</label>
    <type>Checkbox</type>
</CustomField>