force-app/main/default/objects/Deposits__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Carry Forward to Next Deposit</fullName>
            </value>
            <value>
                <fullName>Carry Forward Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>