force-app/main/default/objects/Deposits__c/fields/Total_Refunds_from_Cash_Money_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunds_from_Cash_Money_Orders__c</fullName>
    <description>PacPoint-FT102818 - Created for DCCA Payment Phase 1</description>
    <label>Total Refunds Cash, Check &amp; Money Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>