force-app/main/default/objects/Deposits__c/fields/TotalAmountfromCashMoneyOrders__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountfromCashMoneyOrders__c</fullName>
    <description>PacPoint-FT070418 - Created for phase 1</description>
    <label>Total from Cash, Check &amp; Money Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>