force-app/main/default/objects/Deposits__c/fields/TotalAmountfromCreditCard__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountfromCreditCard__c</fullName>
    <description>PacPoint-FT102818 - Created for DCCA Payment Phase 1</description>
    <label>Total Amount from Credit Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>