force-app/main/default/objects/Deposits__c/fields/TotalHIGETax__c.field-meta.xml
<CustomField>
    <fullName>TotalHIGETax__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PacPoint-FT102818 - Created for DCCA Payment Phase 1</description>
    <label>Total HIGE Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>