force-app/main/default/objects/Deposits__c/fields/TotalReturnsfromeCheck__c.field-meta.xml
<CustomField>
    <fullName>TotalReturnsfromeCheck__c</fullName>
    <description>PacPoint JF 8/10/26: Created for calculating the total eCheck BCF amounts</description>
    <label>Total Returns from eCheck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>