force-app/main/default/objects/Deposits__c/fields/TotalTransactionFees__c.field-meta.xml
<CustomField>
    <fullName>TotalTransactionFees__c</fullName>
    <description>PacPoint-FT102818 - Created for DCCA Payment Phase 1</description>
    <label>Total Transaction Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>