force-app/main/default/objects/Deposits__c/listViews/All_Deposits.listView-meta.xml
<ListView>
    <fullName>All_Deposits</fullName>
    <columns>NAME</columns>
    <columns>EndDatetoPullPayments__c</columns>
    <columns>DepositAmount__c</columns>
    <columns>DepositNumber__c</columns>
    <columns>DepositDate__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <columns>CollectionAllocationNetAmount__c</columns>
    <columns>CollectionAllocationPaymentAmount__c</columns>
    <columns>TotalCollections__c</columns>
    <columns>TotalTransactionFees__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUCDeposit__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Deposits</label>
</ListView>