force-app/main/default/objects/Deposits__c/listViews/PUC_Deposits.listView-meta.xml
<ListView>
    <fullName>PUC_Deposits</fullName>
    <columns>NAME</columns>
    <columns>EndDatetoPullPayments__c</columns>
    <columns>DepositDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DepositNumber__c</columns>
    <columns>Status__c</columns>
    <columns>TotalCollections__c</columns>
    <columns>NetCollectionsafterFees__c</columns>
    <columns>DepositAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUCDeposit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PUC Deposits</label>
</ListView>